syntax= "proto3";

option csharp_namespace = "CustomerService.Grpc";

service GrpcCustomer{
    rpc GetAllCustomers (GetAllRequests) returns (CustomerResponse){};
}

message GetAllRequests {}

message Address {
     string id = 1;
     string addressLine = 2;
     string city = 3;
     string country = 4;
     int32 cityCode = 5;
     string customerId = 6;
}

message GrpcCustomerModel{
    string customerId = 1;
    string name = 2;
    string email = 3;
    repeated Address addresses = 4;
}

message CustomerResponse{
    repeated GrpcCustomerModel customer = 1;
}